package PokemonTerminal.Items.Curas;

public class Curas {
}
