package PokemonTerminal.Items.Curas;

public class Revivir {
}
