package PokemonTerminal.Tipos;

public enum EventoCombate {
    PASARTURNO
}
