package PokemonTerminal.Tipos;

public enum MetodoAprendizaje {
    MT,
    NIVEL
}
