package PokemonTerminal.Tipos;

public enum RatioCaptura {
    BAJO,
    MEDIO,
    ALTO
}
