package PokemonTerminal.Tipos;

public enum Tipo {
    AGUA,
    FUEGO,
    PLANTA,
    HIELO,
    BICHO,
    ACERO,
    ROCA,
    DRAGON,
    TIERRA,
    VOLADOR,
    VENENO,
    ELECTRICO,
    NONE
}

